--- a/src/pages/ConocenosWeb.css
+++ b/src/pages/ConocenosWeb.css
@@ -1,15 +1,18 @@
 .conocenos-web .image-10 {
-  background: url('assets/images/Image20.png') 50% / cover no-repeat;
+  background: url('/assets/images/Image20.png') 50% / cover no-repeat;
   position: absolute;
+
   top: 6px;
+  left: 46%;
   right: 604px;
   width: 235px;
   height: 188px;
 }
 .conocenos-web .image-19 {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  background: url('assets/images/Image10.png') 50% / cover no-repeat;
+  background: url('/assets/images/Image10.png') 50% / cover no-repeat;
   margin-bottom: 69.5px;
+  
   align-self: flex-start;
   width: 50px;
   height: 50px;
@@ -28,6 +31,7 @@
 .conocenos-web .bienvenido-ala-seccin-concenos-permteme-presentarte-alos-creadores-detrs-de-esta-plataforma-somos-un-equipo-apasionado-de-desarrolladores-dedicados-aproporcionarte-la-mejor-experiencia-de-aprendizaje-en-lnea-desde-el-diseo-hasta-la-implementacin-hemos-trabajado-arduamente-para-crear-una-plataforma-que-se-adapte-atus-necesidades-educativas-esperamos-que-disfrutes-de-lo-que-hemos-creado-para-ti {
   overflow-wrap: break-word;
   font-family: 'Inter';
+  
   font-weight: 500;
   font-size: 20px;
   line-height: 1.5;
@@ -43,7 +47,7 @@
 }
 .conocenos-web .graphic {
   border-radius: 8px;
-  background: url('assets/images/Graphic.jpeg') 50% / cover no-repeat, linear-gradient(#B5DBFF, #B5DBFF);
+  background: url('/assets/images/Graphic.jpeg') 50% / cover no-repeat, linear-gradient(#B5DBFF, #B5DBFF);
   margin-bottom: 12px;
   width: 232px;
   height: 232px;
@@ -80,7 +84,7 @@
 }
 .conocenos-web .image {
   border-radius: 8px;
-  background: url('assets/images/Image.jpeg') 50% / cover no-repeat, linear-gradient(#FFEE93, #FFEE93);
+  background: url('/assets/images/Image.jpeg') 50% / cover no-repeat, linear-gradient(#FFEE93, #FFEE93);
   margin-bottom: 12px;
   width: 232px;
   height: 232px;
@@ -117,7 +121,7 @@
 }
 .conocenos-web .image-1 {
   border-radius: 8px;
-  background: url('assets/images/Image1.jpeg') 50% / cover no-repeat, linear-gradient(#FFC1C1, #FFC1C1);
+  background: url('/assets/images/Image1.jpeg') 50% / cover no-repeat, linear-gradient(#FFC1C1, #FFC1C1);
   margin-bottom: 12px;
   width: 232px;
   height: 232px;
@@ -160,16 +164,20 @@
   width: fit-content;
   box-sizing: border-box;
 }
+
 .conocenos-web .educational-virtual-assistant-eva-10 {
-  align-self: flex-end;
+  position: absolute; /* Posiciona el elemento de manera absoluta respecto a su contenedor más cercano con posición relativa */
+  bottom: 0; /* Alinea el elemento con la parte inferior del contenedor */
+  right: 0; /* Alinea el elemento con el lado derecho del contenedor */
+  
   overflow-wrap: break-word;
   font-family: 'Inter';
   font-weight: 600;
   font-size: 24px;
   letter-spacing: -0.2px;
-  line-height: 1.5;
   color: rgba(0, 0, 0, 0.5);
 }
+
 .conocenos-web .container {
   position: relative;
   display: flex;
@@ -178,7 +186,7 @@
   box-sizing: border-box;
 }
 .conocenos-web .image-12 {
-  background: url('assets/images/Image19.png') 50% / cover no-repeat;
+  background: url('/assets/images/Image19.png') 50% / cover no-repeat;
   position: absolute;
   right: 55px;
   bottom: 300px;
@@ -189,6 +197,13 @@
   background: #D6FFFF;
   display: flex;
   padding: 30px 20.2px 8.5px 35px;
-  width: 1480px;
+  height: 99vh;  
+  width: 99vw;
+  
   box-sizing: border-box;
 }
+
+.conocenos-web .logo {
+  width: 100px;
+}
+
