--- a/src/pages/DashboardWebAlu.css
+++ b/src/pages/DashboardWebAlu.css
@@ -1,4 +1,4 @@
-/* src/pages/DashboardWebPro.css */
+/* src/pages/DashboardWebAlu.css */
 
 .dashboard-container {
   display: flex;
@@ -81,13 +81,21 @@
   justify-content: space-between;
   align-items: center;
   background-color: #fff;
-  color: #000;
   padding: 20px;
   border-radius: 10px;
   margin-top: 20px;
 }
 
-
+.add-course-button {
+  background-color: #000;
+  color: #fff;
+  border: none;
+  border-radius: 10%;
+  width: 10px;
+  height: 20px;
+  font-size: 24px;
+  cursor: pointer;
+}
 
 .chat {
   flex: 1;
@@ -131,7 +139,7 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  padding: 20px;
+  padding: 10px;
   background-color: #e0f7fa;
 }
 
@@ -139,17 +147,5 @@
   font-family: 'Inter', sans-serif;
   color: #fff;
   text-decoration: none;
-  cursor: pointer;
-  border-radius: 10px;
-}
-
-
-.button1 {
-  position: relative;
-  background-color: #000;
-  color: #fff;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 10px;
   cursor: pointer;
 }
